--- a/inferential_statistics_1a-Q6.25_Daniel_Loew.ipynb
+++ b/inferential_statistics_1a-Q6.25_Daniel_Loew.ipynb
@@ -1207,7 +1207,7 @@
     }
    ],
    "source": [
-    "#the critical value from the t-table is 2.00\n",
+    "#the critical value from the t-table is +/- 2.00\n",
     "#now, divide sample standard deviation by the square root of the sample size (n=50)\n",
     "multiplier = random_sample_std / np.sqrt(50)\n",
     "multiplier"
@@ -1230,7 +1230,7 @@
     }
    ],
    "source": [
-    "#multiply critical value by the multiplier (standard deviaton/square root of n)\n",
+    "#multiply critical value by the multiplier (standard deviation/square root of n)\n",
     "interval = critical_value * multiplier\n",
     "interval"
    ]
